--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -1,3 +1,4 @@
+{% extends "base.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,14 +7,18 @@
 
 </head>
 
+
 {{ titulo }}
 {{ request.user }}
 <hr/>
 <br/>
 
+
 {% if form %}
+    {% block content %}
 <form method="POST" action="">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="registrar"/>
 </form>
+    {% endblock %}
 {% endif %}
