Herencia con templates : include tag, Blocks

--- a/src/templates/forms.html
+++ b/src/templates/forms.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>AQUASOFT</title>
+{% include "navbar.html " %}
 
-</head>
 
-{{ titulo }}
+<hr/>
+{{ titulo}}
 {{ request.user }}
 <hr/>
-<br/>
 
 
+{% if form %}
 <form method="POST" action="">{% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="registrar"/>
 </form>
+{% endif %}
 
