--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,3 +1,11 @@
+{% load static %}
+    <!-- Bootstrap core CSS -->
+    <link href= "{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+ <title>AQUASOFT </title>
+
 <body>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
