Herencia con templates : include tag, Blocks

--- a/src/templates/forms.html
+++ b/src/templates/forms.html
@@ -1,5 +1,5 @@
 {% include "navbar.html " %}
-
+{% load crispy_forms_tags %}
 
 <hr/>
 {{ titulo}}
@@ -9,7 +9,7 @@
 
 {% if form %}
 <form method="POST" action="">{% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="registrar"/>
 </form>
 {% endif %}
