--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -1,4 +1,5 @@
 {% include "navbar.html"%}
+{% load crispy_forms_tags %}
 
 {#<!DOCTYPE html>#}
 {#<html lang="en">#}
@@ -18,8 +19,11 @@
 {% if form %}
 
 <form method="POST" action="">{% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
+    <br/>
     <input type="submit" value="registrar"/>
+    <br/>
 </form>
+
 
 {% endif %}
