--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
 {% include "navbar.html" %}
 
 
-    <div class="container-fluid">
+    <div class="container-fluid"> &nbsp
       <div class="row">
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <ul class="nav nav-pills flex-column">
@@ -29,67 +29,69 @@
             </li>
 
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Reportes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Analisis</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Exportar</a>
-            </li>
-          </ul>
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Reportes</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Analisis</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Exportar</a>#}
+{#            </li>#}
+{#          </ul>#}
 
 
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item again</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">One more nav</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Another nav item</a>
-            </li>
-          </ul>
+{#          <ul class="nav nav-pills flex-column">#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Nav item</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Nav item again</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">One more nav</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Another nav item</a>#}
+{#            </li>#}
+{#          </ul>#}
 
-          <ul class="nav nav-pills flex-column">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nav item again</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">One more nav</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Another nav item</a>
-            </li>
-          </ul>
-        </nav>
+{#          <ul class="nav nav-pills flex-column">#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Nav item again</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">One more nav</a>#}
+{#            </li>#}
+{#            <li class="nav-item">#}
+{#              <a class="nav-link" href="#">Another nav item</a>#}
+{#            </li>#}
+{#          </ul>#}
+      </nav>
 
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-          <h1>Menú principal</h1>
 
+            <h1>Menú principal</h1>
           <section class="row text-center placeholders">
+
                <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+
+              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="50" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
               <h4>GESTION DE CURSOS</h4>
-              <span class="text-muted">catálogo de cursos</span>
+              <a class="nav-link active" href="/inicio">  <span class="text-muted">catálogo de cursos</span> </a>
             </div>
             <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="50" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
               <h4>GESTION ALUMNOS</h4>
               <div class="text-muted">inscripciones</div>
             </div>
             <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+              <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="50" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
               <h4>GESTION DE COMPRAS</h4>
               <span class="text-muted">inventario de productos</span>
             </div>
             <div class="col-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="50" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
               <h4>GESTION DE VENTAS</h4>
               <span class="text-muted">realizar ventas</span>
             </div>
