--- a/src/templates/forms.html
+++ b/src/templates/forms.html
@@ -1,6 +1,6 @@
 {% include "navbar.html " %}
 {% load crispy_forms_tags %}
-
+<div class="container-fluid">
 <hr/>
 {{ titulo}}
 {{ request.user }}
@@ -10,7 +10,7 @@
 {% if form %}
 <form method="POST" action="">{% csrf_token %}
     {{ form|crispy }}
-    <input type="submit" value="registrar"/>
+    <input class='btn btn-success' type="submit" value="Enviar"/>
 </form>
 {% endif %}
-
+</div>
