--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -4,12 +4,16 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+
  <title>AQUASOFT </title>
+
+
 
 <body>
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">AQUASOFT</a>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> &nbsp
+           <img  src="{% static 'img/logo.png' %}" width="80px" height="50px" class="img-fluid rounded-circle">&nbsp&nbsp
+        <a class="navbar-brand" href="/principal">AQUASOFT</a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
