--- a/static_env/static_root/css/dashboard.css
+++ b/static_env/static_root/css/dashboard.css
@@ -58,7 +58,16 @@ h1 {
   padding-bottom: 3rem;
 }
 
+
 .placeholder img {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+  width: 50px;
+  height:50px;
+  border: 0;
+  alignment: top;
+
 }
+
+
+
