--- a/src/static_pro/static/css/dashboard.css
+++ b/src/static_pro/static/css/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-  padding-top: 3.5rem;
+  padding-top: 0;
 }
 
 /*
@@ -12,8 +12,8 @@ body {
  */
 
 h1 {
-  padding-bottom: 9px;
-  margin-bottom: 20px;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
   border-bottom: 1px solid #eee;
 }
 
@@ -34,11 +34,11 @@ h1 {
 }
 
 .sidebar .nav {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .sidebar .nav-item {
-  width: 100%;
+  width: 50%;
 }
 
 .sidebar .nav-item + .nav-item {
@@ -55,10 +55,22 @@ h1 {
 
 /* Placeholders */
 .placeholders {
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
 }
 
 .placeholder img {
-  padding-top: 1.5rem;
+  padding-top: 1rem;
   padding-bottom: 1.5rem;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 1px;
+  grid-auto-rows: minmax(1px, auto);
+}
+
+
+
+.img-responsive{
+  width: 150px; height: 150px
 }
