--- a/static_env/static_root/css/dashboard.css
+++ b/static_env/static_root/css/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-  padding-top: 3.5rem;
+  padding-top: 0;
 }
 
 /*
@@ -12,8 +12,8 @@ body {
  */
 
 h1 {
-  padding-bottom: 9px;
-  margin-bottom: 20px;
+  padding-bottom: 1px;
+  margin-bottom: 1px;
   border-bottom: 1px solid #eee;
 }
 
@@ -34,11 +34,11 @@ h1 {
 }
 
 .sidebar .nav {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .sidebar .nav-item {
-  width: 100%;
+  width: 50%;
 }
 
 .sidebar .nav-item + .nav-item {
@@ -55,19 +55,10 @@ h1 {
 
 /* Placeholders */
 .placeholders {
-  padding-bottom: 3rem;
+  padding-bottom: 1rem;
 }
-
 
 .placeholder img {
-  padding-top: 1.5rem;
+  padding-top: 1rem;
   padding-bottom: 1.5rem;
-  width: 50px;
-  height:50px;
-  border: 0;
-  alignment: top;
-
 }
-
-
-
