--- a/src/templates/admin/base_site.html
+++ b/src/templates/admin/base_site.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">AQUASOFT</a></h1>
+<h1 id="site-name"><a href="{% url 'inicio' %}">AQUASOFT</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
