--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -9,79 +9,28 @@
 {% block content %}
 
     <!-- Bootstrap core CSS -->
-{#   <link href= "{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
+    {#   <link href= "{% static 'css/bootstrap.min.css' %}" rel="stylesheet">#}
     <!-- Custom styles for this template -->
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
 
+    {#    <div>Iconos diseñados por <a href="http://www.freepik.com" title="Freepik">Freepik</a> desde <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.com</a> con licencia <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>#}
 
-  </head>
+
+    </head>
     <section>
-            <h1>Menú principal</h1>
+        <h1>Menú principal</h1>
+            <div class="menu">
+        {% for key, menu in menus.items %}
+                <a class="menu-action" href="{{ menu.url }}">
+                    <div class="img">
+                        <img src="{% static menu.img %} " class="img-responsive img-rounded ">
+                        <h4>{{ menu.title }}</h4>
+                        <span class="text-muted">{{ menu.desc }}</span>
+                    </div>
+                </a>
 
+        {% endfor %}
+            </div>
+    </section>
 
-               <div style="position: absolute; top:200px; left: 100px;">
-        <div class="img">
-            <img src="{% static 'admin/img/ajustes.png' %} " class="img-responsive img-rounded " >
-            <h4>ADMINISTRACIÓN</h4>
-              <a class="nav-link active" href="/admin">  <span class="text-muted">ajustes de contenidos</span> </a>
-             </div></div>
-
-
-                <div style="position: absolute; top:200px; left: 300px;">
-        <div class="img">
-            <img src="{% static 'admin/img/natacion.png' %} " class="img-responsive img-rounded " >
-            <h4>GESTION DE CURSOS</h4>
-              <a class="nav-link active" href="/admin">  <span class="text-muted">cursos y horarios</span> </a>
-             </div></div>
-
-
-        <div style="position: absolute; top:200px; left: 550px;">
-            <div class="img">
-            <img src="{% static 'admin/img/indumentaria.png' %} " class="img-responsive img-rounded " >
-              <h4>VENTAS</h4>
-                <a class="nav-link active" href="/admin">  <span class="text-muted">uniformes</span> </a>
-
-             </div></div>
-
-
-        <div style="position: absolute; top:200px; left: 750px;">
-            <div class="img">
-            <img src="{% static 'admin/img/inscripcion.png' %} " class="img-responsive img-rounded " >
-
-              <h4>GESTION DE ALUMNOS</h4>
-                <a class="nav-link active" href="/admin">  <span class="text-muted">incripciones</span> </a>
-            </div></div>
-
-
-
-        <div style="position: absolute; top:200px; left: 950px;">
-            <div class="img">
-            <img src="{% static 'admin/img/asistencia.png' %} " class="img-responsive img-rounded " >
-
-              <h4>ASISTENCIA</h4>
-              <a class="nav-link active" href="/admin">  <span class="text-muted">control de asitencia</span> </a>
-            </div></div>
-
-         <div style="position: absolute; top:200px; left: 1150px;">
-            <div class="img">
-            <img src="{% static 'admin/img/cobranza.png' %} " class="img-responsive img-rounded " >
-
-              <h4>COBRANZAS</h4>
-             <a class="nav-link active" href="/admin">  <span class="text-muted">cobro de cuotas</span> </a>
-            </div></div>
-
-
-        <div style="position: absolute; top:200px; left: 1350px;">
-            <div class="img">
-            <img src="{% static 'admin/img/analitica.png' %} " class="img-responsive img-rounded " >
-
-              <h4>REPORTES</h4>
-              <a class="nav-link active" href="/admin">  <span class="text-muted">ingresos/egresos</span> </a>
-            </div></div>
-
-
-
-
-          </section>
-
-  {% endblock %}
+{% endblock %}
